# aniplay

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.py  cover_cache.py  cover_fetcher.py  first_run.py  gui.py  history.py  install.sh  install_deps.sh  library_manager.py  package-lock.json  package.json  packaging_instructions.txt  pyproject.toml  requirements.txt  settings.py  setup.py
anime-library/: .gitkeep
assets/: app_icon.ico:Zone.Identifier  app_icon.svg:Zone.Identifier
assets/icons/: README.md
backend/: mpvplayer.cpp
docs/: API.md  CONTRIBUTING.md
scripts/: dev.js
src/: app.py  main.cpp  mainwindow.cpp  mainwindow.h  mpvwidget.cpp  mpvwidget.h
src/aniplay/: __init__.py  anilist.py  app.py  cache.py  config.py  gui.py  library.py  main.py  player.py  utils.py
src/aniplay/core/: database.py  library_scanner.py
src/aniplay/gui/: enhanced_settings_dialog.py  main_window.py  settings_dialog.py
src/aniplay/models/: anime.py  episode.py
src/aniplay/utils/: file_utils.py
src/core/: anidb_api.py  anilist_api.py  api.py  database.py  database_manager.py  filename_parser.py  jikan_api.py  library_scanner.py  manager.py  metadata_fetcher.py  mpv_player.py  parser.py  scanner.py  settings_manager.py  tasks.py  thumbnails.py
src/main/: index.js  ipc-handlers.js  settings.json  window-manager.js
src/main/api/: anilist-api.js  mal-api.js
src/main/video/: mpv-controller.js
src/python/: mal_scraper.py
src/renderer/: index.html  player.html
src/renderer/css/: components.css  library.css  main.css  player.css
src/renderer/js/: library.js  main.js  modal.js  player.js
src/shared/: constants.js  events.js
src/styles/: dark_theme.qss
src/ui/: episode_item.py  episode_widget.py  main_window.py  mainwindow.ui  ui_mainwindow.py
src/widgets/: anime_detail_view.py  anime_grid_widget.py  episode_list_widget.py  player_control_widget.py  search_widget.py  settings_widget.py  sidebar_widget.py  sub_series_grid_widget.py  ui_anime_detail_view.py  ui_anime_grid_widget.py  ui_player_control_widget.py  ui_search_widget.py  ui_settings_widget.py  ui_sidebar_widget.py
src/widgets/ui/: anime_detail_view.ui  anime_grid_widget.ui  player_control_widget.ui  search_widget.ui  settings_widget.ui  sidebar_widget.ui
